Adiciona motores de jogo para humanos e agentes IA
Implementa as classes `HumanGameEngine` e `AgentGameEngine` para gerenciar a lógica de jogo para jogadores humanos e agentes de IA, respectivamente. A classe `GameEngine` foi transformada em uma classe abstrata, removendo a necessidade de um manipulador de entrada no construtor e definindo um método abstrato `Play()`. O arquivo `HumanGameEngine.cs` foi adicionado para a lógica do jogador humano, e referências foram atualizadas no projeto para incluir os novos arquivos.

--- a/TetrisGame/TetrisGame.csproj
+++ b/TetrisGame/TetrisGame.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TetrisGame.Application\AgentGameEngine.cs" />
     <Compile Include="TetrisGame.Application\GameEngine.cs" />
+    <Compile Include="TetrisGame.Application\HumanGameEngine.cs" />
     <Compile Include="TetrisGame.Application\IEnvironment.cs" />
     <Compile Include="TetrisGame.Application\TetrisEnvironment.cs" />
     <Compile Include="TetrisGame.Domain\Action.cs" />
